@@ -9,6 +9,7 @@ next:
          - add timeout to check_drivesize for hanging mounts
          - add check_cpu_utilization
          - add check_mount
+         - add check_temperature
          - add fmt macro operator to formt numbers
          - add automatic retries to wmi querys
          - add /api/v1/admin/reload rest endpoint to initialize config changes
